[gd_scene load_steps=2 format=3 uid="uid://b3qeb0chuwyjq"]

[ext_resource type="Script" path="res://scene/ui/bag_slot.gd" id="1_qawc5"]

[node name="BagSlot" type="PanelContainer"]
custom_minimum_size = Vector2(48, 48)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1104.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qawc5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
